# OpenQbo2

./: .gitlab-ci.yml
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/qbo_arduqbo/: BaseStop.h  BaseStopRequest.h  BaseStopResponse.h  BatteryLevel.h  Expression.h  EyesPositions.h  HeadPose.h  Irs.h  LCD.h  Mic.h  Mouth.h  NoiseLevels.h  Nose.h  Test.h  TestRequest.h  TestResponse.h  TorqueEnable.h  TorqueEnableRequest.h  TorqueEnableResponse.h  motor_state.h
devel/include/qbo_face_msgs/: FacePosAndDist.h  GetName.h  GetNameRequest.h  GetNameResponse.h  LearnFaces.h  LearnFacesRequest.h  LearnFacesResponse.h  RecognizeFace.h  RecognizeFaceRequest.h  RecognizeFaceResponse.h  Train.h  TrainRequest.h  TrainResponse.h
devel/include/qbo_listen/: Listened.h  free_train.h  free_trainRequest.h  free_trainResponse.h  new_word.h  new_wordRequest.h  new_wordResponse.h  spell_word.h  spell_wordRequest.h  spell_wordResponse.h  train_word.h  train_wordRequest.h  train_wordResponse.h
devel/include/qbo_system_info/: AskInfo.h  AskInfoRequest.h  AskInfoResponse.h
devel/include/qbo_talk/: Text2Speach.h  Text2SpeachRequest.h  Text2SpeachResponse.h
devel/lib/pkgconfig/: qbo_arduqbo.pc  qbo_cereal_port.pc  qbo_face_msgs.pc  qbo_listen.pc  qbo_move.pc  qbo_random_move.pc  qbo_system_info.pc  qbo_talk.pc
devel/lib/python2.7/dist-packages/qbo_arduqbo/msg/: _Expression.py  _Mic.py  _Mouth.py  _Nose.py  __init__.py  _motor_state.py
devel/lib/python2.7/dist-packages/qbo_arduqbo/srv/: _BaseStop.py  _Test.py  __init__.py
devel/lib/python2.7/dist-packages/qbo_face_msgs/msg/: _FacePosAndDist.py
devel/lib/python2.7/dist-packages/qbo_face_msgs/srv/: _LearnFaces.py  _RecognizeFace.py
devel/lib/python2.7/dist-packages/qbo_listen/msg/: _Listened.py  __init__.py
devel/lib/python2.7/dist-packages/qbo_listen/srv/: __init__.py  _free_train.py  _new_word.py  _spell_word.py  _train_word.py
devel/lib/python2.7/dist-packages/qbo_system_info/srv/: _AskInfo.py
devel/lib/python2.7/dist-packages/qbo_talk/srv/: _Text2Speach.py
devel/lib/qbo_arduqbo/: qbo_arduqbo
devel/lib/qbo_listen/: qbo_listen
devel/lib/qbo_move/: qbo_move_base  qbo_move_head
devel/share/common-lisp/ros/qbo_arduqbo/msg/: BatteryLevel.lisp  Expression.lisp  EyesPositions.lisp  HeadPose.lisp  Irs.lisp  LCD.lisp  Mic.lisp  Mouth.lisp  NoiseLevels.lisp  Nose.lisp  _package.lisp  motor_state.lisp  qbo_arduqbo-msg.asd
devel/share/common-lisp/ros/qbo_face_msgs/msg/: _package_FacePosAndDist.lisp  qbo_face_msgs-msg.asd
devel/share/common-lisp/ros/qbo_face_msgs/srv/: GetName.lisp  LearnFaces.lisp  RecognizeFace.lisp  Train.lisp  _package.lisp  _package_RecognizeFace.lisp  _package_Train.lisp  qbo_face_msgs-srv.asd
devel/share/common-lisp/ros/qbo_listen/msg/: Listened.lisp  _package.lisp  _package_Listened.lisp  qbo_listen-msg.asd
devel/share/common-lisp/ros/qbo_listen/srv/: _package.lisp  _package_free_train.lisp  _package_new_word.lisp  _package_spell_word.lisp  _package_train_word.lisp  free_train.lisp  new_word.lisp  qbo_listen-srv.asd  spell_word.lisp  train_word.lisp
devel/share/common-lisp/ros/qbo_talk/srv/: Text2Speach.lisp  _package.lisp  _package_Text2Speach.lisp  qbo_talk-srv.asd
devel/share/gennodejs/ros/qbo_arduqbo/msg/: BatteryLevel.js  Expression.js  EyesPositions.js  HeadPose.js  Irs.js  LCD.js  Mic.js  Mouth.js  NoiseLevels.js  Nose.js  _index.js  motor_state.js
devel/share/gennodejs/ros/qbo_arduqbo/srv/: BaseStop.js  Test.js  TorqueEnable.js  _index.js
devel/share/gennodejs/ros/qbo_face_msgs/msg/: FacePosAndDist.js  _index.js
devel/share/gennodejs/ros/qbo_face_msgs/srv/: GetName.js  LearnFaces.js  RecognizeFace.js  Train.js  _index.js
devel/share/gennodejs/ros/qbo_listen/msg/: Listened.js  _index.js
devel/share/gennodejs/ros/qbo_listen/srv/: _index.js  free_train.js  new_word.js  spell_word.js  train_word.js
devel/share/qbo_arduqbo/cmake/: qbo_arduqbo-msg-extras.cmake  qbo_arduqbo-msg-paths.cmake  qbo_arduqboConfig.cmake
devel/share/qbo_cereal_port/cmake/: qbo_cereal_portConfig.cmake
devel/share/qbo_face_msgs/cmake/: qbo_face_msgs-msg-paths.cmake  qbo_face_msgsConfig.cmake
devel/share/qbo_listen/cmake/: qbo_listen-msg-paths.cmake  qbo_listenConfig.cmake
devel/share/qbo_move/cmake/: qbo_moveConfig.cmake
devel/share/qbo_random_move/cmake/: qbo_random_moveConfig.cmake
devel/share/qbo_system_info/cmake/: qbo_system_info-msg-paths.cmake  qbo_system_infoConfig.cmake
devel/share/qbo_talk/cmake/: qbo_talk-msg-extras.cmake  qbo_talk-msg-paths.cmake  qbo_talkConfig.cmake
devel/share/roseus/ros/qbo_arduqbo/: manifest.l
devel/share/roseus/ros/qbo_face_msgs/: manifest.l
devel/share/roseus/ros/qbo_listen/: manifest.l
devel/share/roseus/ros/qbo_system_info/: manifest.l
devel/share/roseus/ros/qbo_talk/: manifest.l
src/qbo_arduqbo/: CMakeLists.txt  package.xml
src/qbo_arduqbo/src/qbo_arduqbo/msg/: _BatteryLevel.py  _EyesPositions.py  _HeadPose.py  _Irs.py  _LCD.py  _NoiseLevels.py
src/qbo_arduqbo/src/qbo_arduqbo/srv/: _TorqueEnable.py
src/qbo_cereal_port/: CMakeLists.txt
src/qbo_face_msgs/: CMakeLists.txt  package.xml
src/qbo_face_msgs/msg_gen/cpp/include/qbo_face_msgs/: FacePosAndDist.h
src/qbo_face_msgs/msg_gen/lisp/: FacePosAndDist.lisp  _package.lisp
src/qbo_face_msgs/src/qbo_face_msgs/msg/: __init__.py
src/qbo_face_msgs/src/qbo_face_msgs/srv/: _GetName.py  _RecognizeFace.py  _Train.py  __init__.py
src/qbo_face_msgs/srv/: RecognizeFace.srv
src/qbo_face_msgs/srv_gen/cpp/include/qbo_face_msgs/: GetName.h  LearnFaces.h  RecognizeFace.h  Train.h
src/qbo_face_msgs/srv_gen/lisp/: RecognizeFace.lisp  _package.lisp  _package_GetName.lisp  _package_LearnFaces.lisp  qbo_face_msgs-srv.asd
src/qbo_listen/: CMakeLists.txt  package.xml
src/qbo_listen/src/: julius.cpp
src/qbo_move/: CMakeLists.txt
src/qbo_random_move/: CMakeLists.txt  CMakeLists0.txt  package.xml
src/qbo_system_info/: CMakeLists.txt  package.xml
src/qbo_system_info/srv_gen/cpp/include/qbo_system_info/: AskInfo.h
src/qbo_talk/: CMakeLists.txt
(+30 files in other folders)
